[tool.poetry]
name = "python-code-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
merklelib = "^1.0"
ecdsa = "^0.16.1"
cryptography = "^3.4.7"
cryptocode = "^0.1"
base58 = "^2.1.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
